--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content container 75%">
 					<header>
-						<h2>Hey.</h2>
+						<h2>Hello.</h2>
 					</header>
 					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed
 					by <a href="http://html5up.net">HTML5 UP</a>, built on <strong><a href="http://getskel.com">Skel</a></strong>,
@@ -110,7 +110,6 @@
 				<div class="content container">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
 					</header>
 					<div class="box container 75%">
 
