--- a/html5up-big-picture/index.html
+++ b/html5up-big-picture/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Anthony Cannata</title>
+		<title>Big Picture by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,7 +20,7 @@
 			<header id="header">
 
 				<!-- Logo -->
-					<h1 id="logo">Anthony Cannata</h1>
+					<h1 id="logo">Big Picture</h1>
 
 				<!-- Nav -->
 					<nav id="nav">
@@ -39,9 +39,11 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content container 75%">
 					<header>
-						<h2>Hello.</h2>
+						<h2>Hey.</h2>
 					</header>
-					<p>I am a <strong>User Interface Designer</strong>.</p>
+					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed
+					by <a href="http://html5up.net">HTML5 UP</a>, built on <strong><a href="http://getskel.com">Skel</a></strong>,
+					and released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a>.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -54,8 +56,9 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>As a User Interface Designer, my job is to design clean and artful platforms. All while being able to translate high-level requirements into interaction flows and artifacts, and transform them into beautiful, intuitive, and functional user interfaces.​
-</p>
+					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
+					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -66,7 +69,9 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>I'm a designer based out of Chicago, from which I was born and raised. Originally I went to school for Business,    </p>
+					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
+					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -105,6 +110,7 @@
 				<div class="content container">
 					<header>
 						<h2>Say Hello.</h2>
+						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
 					</header>
 					<div class="box container 75%">
 
