Title, sub title, work about info

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 						<!-- Me -->
 							<article id="me" class="panel">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Anthony Cannata</h1>
+									<p>User Interface Designer</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
@@ -48,9 +48,7 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									As a User Interface Designer, my job is to design clean and artful platforms. All while being able to translate high-level requirements into interaction flows and artifacts, and transform them into beautiful, intuitive, and functional user interfaces.​
 								</p>
 								<section>
 									<div class="row">
