--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>I am Strata</strong>, a super simple<br />
-				responsive site template freebie<br />
-				crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+				<a href="#" class="image avatar"><img src="images/Me.jpg" alt="" /></a>
+				<h1><strong>Welcome, I'm Anthony</strong>, a User Interface Designer based in Chicago<br />
+				</a>.</h1>
 			</header>
 
 		<!-- Main -->
