--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/Me.jpg" alt="" /></a>
-				<h1><strong>Welcome, I'm Anthony</strong>, a User Interface Designer based in Chicago<br />
+				<h1>Welcome! I'm <strong>Anthony</strong>, a User Interface Designer based in Chicago<br />
 				</a>.</h1>
 			</header>
 
