period after title

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/Me.jpg" alt="" /></a>
-				<h1>Welcome! I'm <strong>Anthony</strong>, a User Interface Designer based in Chicago<br />
-				</a>.</h1>
+				<h1>Welcome! I'm <strong>Anthony</strong>, a User Interface Designer based in Chicago.
+				</a></h1>
 			</header>
 
 		<!-- Main -->
